--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="./files/responsivevoice.min.js.download"></script>
 <script data-domain="picoapps.xyz" defer="" src="./files/script.outbound-links.js.download"></script></head>
 <body class="bg-gray-50 min-h-screen flex flex-col items-center justify-center" bgcolor=#000000>
-<font size=44 color="white">Learn Japanese!</font><br>
+<font size=44 color=#FFFFFF>Learn Japanese!</font><br>
 <div class="bg-white p-8 rounded-lg shadow-md w-full md:max-w-md">
 <h1 class="text-xl font-bold mb-4">Random Japanese Word</h1>
 <div class="flex flex-col items-center">
