--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			{ word: "嬉しい", transliteration: "ureshii", translation: "Happy" },
 			{ word: "悲しい", transliteration: "kanashii", translation: "Sad" },
 			{ word: "怖い", transliteration: "kowai", translation: "Scary" },
-			{ word: "面倒くさい", transliteration: "menzukusai", translation: "Annoying / Troublesome" },
+			{ word: "面倒くさい", transliteration: "mendokusai", translation: "Annoying / Troublesome" },
 			{ word: "大丈夫", transliteration: "daijoubu", translation: "Okay / All right" },
 			{ word: "ありがとう", transliteration: "arigatou", translation: "Thank you" },
 			{ word: "ごめんなさい", transliteration: "gomennasai", translation: "I'm sorry" },
